--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <footer class="footer">
             <p class="footer__title">Deepanshu yadav</p>
             <div class="footer__social">
-                <a href="https://www.facebook.com/dipuyadav/" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.facebook.com/Dipu Yadav/" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/dipuyadav0502/?hl=en" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/deepanshuyadav" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
